# live-streamer

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  USAGE.md
src/: actor.rs  event_bus.rs  events.rs  live_platform.rs  main.rs  validator.rs  websocket.rs
src/platform/: bilibili.rs  douyin.rs  manager.rs  mod.rs  websocket.rs  youtube.rs
src/routes/: mod.rs
