[package]
name = "live-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-broker = "0.4"
actix-codec = "0.5"
actix-cors = "0.7"
actix-files = "0.6"
actix-http = "3.5"
actix-identity = "0.8.0"
actix-multipart = "0.7"
actix-protobuf = "0.11"
actix-session = "0.10"
actix-test = "0.1"
actix-tls = "3.4"
actix-utils = "3"
actix-web = "4.9"
actix-web-actors = "4.1"
actix-web-lab = "0.23"
actix-ws = "0.3"
awc = "3.2"

chrono = { version = "0.4.30", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15"
env_logger = "0.11"
eyre = { version = "0.6", default-features = false, features = ["auto-install", "track-caller"] }
color-eyre = "0.6"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
openssl = { version = "0.10.73", features = ["v110"] }
parking_lot = "0.12"
pin-project-lite = "0.2"
rand = "0.9.0"
redis = { version = "0.29.0" }
reqwest = { version = "0.12", features = ["json", "stream"] }
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tokio = { version = "1.24.2", features = ["sync", "io-util"] }
tokio-util = "0.7.4"
tokio-stream = "0.1.1"
tracing = "0.1.30"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
